export const Route = {
  WeatherList: 'WeatherList',
  WeatherDetail: 'WeatherDetail',
} as const;
